fix: improve comic screen error message
The error message on the comic screen has been updated to be more user-friendly and informative. It now guides users to check their internet connection or try again later if an error occurs.

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -28,7 +28,7 @@
   "reset_timer_controls": "Reset",
   "start_timer_timer_controls": "Start Timer",
   "pause_timer_controls": "Pause",
-  "error_prefix_comic_screen": "Error: {error}",
+  "error_prefix_comic_screen": "An error occurred while trying to connect to the server.\nPlease check your connection or try again later.",
   "failed_to_load_image_comic_screen": "Failed to load image",
   "no_data_available_comic_screen": "No data available",
   "added_participants_timer_page": "Added {count} new {entity}",
